--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "apollo-server-micro": "^2.17.0",
+    "graphql": "^15.3.0",
+    "micro": "^9.3.4",
+    "mongodb": "^3.6.0",
     "next": "9.5.1",
+    "next-connect": "^0.8.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
