--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "apollo-server-micro": "^2.17.0",
     "graphql": "^15.3.0",
+    "isomorphic-unfetch": "^3.0.0",
     "micro": "^9.3.4",
     "mongodb": "^3.6.0",
     "next": "9.5.1",
